<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddTask.TimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="18sp"/>

        <TimePicker
            android:id="@+id/timeStartPicker"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/end" />

        <TimePicker
            android:id="@+id/timeEndPicker"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ok" />
    </LinearLayout>


</FrameLayout>