<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".Templates.MainTemplate">

    <FrameLayout
        android:id="@+id/template_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="#0B0909"
        app:fabCustomSize="60dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="70dp"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:useCompatPadding="false" />

    <ImageButton
        android:id="@+id/sidebarButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/sidebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="TouchTargetSizeCheck" />

    <FrameLayout
        android:id="@+id/sidebarLayout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/sidebarOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>